30-tools/monitoring/promtail.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: promtail
      containers:
        - name: promtail
          image: grafana/promtail:2.9.0
          args:
            - -config.file=/etc/promtail/config.yml
          volumeMounts:
            - name: promtail-config
              mountPath: /etc/promtail/config.yml
              subPath: config.yml
            - name: varlog
              mountPath: /var/log
            - name: containers
              mountPath: /var/log/containers
            - name: pods
              mountPath: /var/log/pods
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-config
        - name: varlog
          hostPath:
            path: /var/log
        - name: containers
          hostPath:
            path: /var/log/containers
        - name: pods
          hostPath:
            path: /var/log/pods
