30-tools/monitoring/loki.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.9.0
          args:
            - -config.file=/etc/loki/local-config.yaml
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki/local-config.yaml
              subPath: local-config.yaml
            - name: loki-wal
              mountPath: /wal
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: loki-wal
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 3100
      targetPort: 3100
      name: http
  selector:
    app: loki
